# cosmo-docs

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy.yml
docs/: CNAME  api-reference.md  getting-started.md  index.md  introduction.md  locales.md  parity.md  platform-notes.md  playground.md  resources.md  robots.txt
docs/guide/: collation-text.md  dates-times.md  lists-ranges-relative.md  locale-metadata.md  messages-plurals.md  money.md  negotiation-names.md  numbers-money.md  numbers.md  terminology.md  transliteration-parsing.md
docs/javascripts/: lang-select.js  playground.js
docs/javascripts/cosmopolitan/: README.md  cosmo.js  errors.js  helper.js  index.js  message.js
docs/overrides/: home.html  main.html
docs/stylesheets/: home.css  playground.css
